--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ commands:
           name: Destroy environments
           when: on_fail
           command: |
-            aws cloudformation delete-stack --stack-name << parameters.workflow_id >>
+            aws cloudformation delete-stack --stack-name << parameters.stack >>
 
 jobs:
   lint:
