--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,7 +81,7 @@ jobs:
             aws cloudformation deploy \
               --template-file ~/project/.circleci/files/eks.yml \
               --stack-name "eks-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
+              --parameter-overrides ProjectName="aws-devops"  \
               --tags project=capstone-devops
       - destroy-environment:
           stack: eks-${CIRCLE_WORKFLOW_ID:0:7}
