--- a/.circleci/files/eks.yml
+++ b/.circleci/files/eks.yml
@@ -1,8 +1,8 @@
 Description: Script of network
 
 Parameters: 
-  EnvironmentName:
-    Description: Environment name
+  ProjectName:
+    Description: Project name
     Type: String
   VpcCIDR: 
     Description: The IP range (CIDR notation) for this VPC
@@ -25,13 +25,13 @@ Resources:
       EnableDnsHostnames: true
       Tags: 
         - Project: Name 
-          Value: !Ref EnvironmentName
+          Value: !Ref ProjectName
   InternetGateway:
     Type: AWS::EC2::InternetGateway
     Properties:
       Tags:
       - Key: Name
-        Value: !Ref EnvironmentName
+        Value: !Ref ProjectName
   InternetGatewayAttachment:
     Type: AWS::EC2::VPCGatewayAttachment
     Properties:
@@ -47,7 +47,7 @@ Resources:
       MapPublicIpOnLaunch: true
       Tags: 
         - Key: Name 
-          Value: !Sub ${EnvironmentName} Public Subnet (AZ1)
+          Value: !Sub ${ProjectName} Public Subnet (AZ1)
   PublicSubnet2: 
     Type: AWS::EC2::Subnet
     Properties:
@@ -57,14 +57,14 @@ Resources:
       MapPublicIpOnLaunch: true
       Tags: 
         - Key: Name 
-          Value: !Sub ${EnvironmentName} Public Subnet (AZ2)
+          Value: !Sub ${ProjectName} Public Subnet (AZ2)
   PublicRouteTable:
     Type: AWS::EC2::RouteTable
     Properties: 
       VpcId: !Ref VPC
       Tags: 
         - Key: Name 
-          Value: !Sub ${EnvironmentName} Public Routes
+          Value: !Sub ${ProjectName} Public Routes
   DefaultPublicRoute: 
     Type: AWS::EC2::Route
     DependsOn: InternetGatewayAttachment
@@ -161,7 +161,7 @@ Resources:
         DesiredSize: 2
         MaxSize: 2
       Labels:
-        Project: !Ref EnvironmentName
+        Project: !Ref ProjectName
       Subnets:
         - !Ref PublicSubnet1
         - !Ref PublicSubnet2
