--- a/.circleci/files/eks.yml
+++ b/.circleci/files/eks.yml
@@ -17,6 +17,15 @@ Parameters:
     Type: String
     Default: 10.0.1.0/24
 
+Mappings:
+    ServicePrincipals:
+      aws-cn:
+        ec2: ec2.amazonaws.com.cn
+      aws-us-gov:
+        ec2: ec2.amazonaws.com
+      aws:
+        ec2: ec2.amazonaws.com
+
 Resources:
   VPC: 
     Type: AWS::EC2::VPC
