--- a/.circleci/files/eks.yml
+++ b/.circleci/files/eks.yml
@@ -139,6 +139,7 @@ Resources:
   eksNodeRole:
     Type: AWS::IAM::Role
     Properties:
+      Name: eksNodeRole
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
