--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,3 @@
-# Python CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-python/ for more details
-#
 version: 2.1
 
 commands:
@@ -93,29 +89,26 @@ jobs:
     steps:
       - checkout
       - run:
-          name: install dependencies
+          name: Install dependencies
           command: |
             yum install -y curl tar gzip sudo
             curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
             sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
             kubectl version --client
             aws eks --region us-east-1 update-kubeconfig --name myEKSCluster
-            sudo apt install apt-transport-https ca-certificates curl software-properties-common
-            sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable"
-            apt-cache policy docker-ce
-            sudo apt install docker-ce
-            sudo systemctl status docker
-      - run: |
-          TAG=0.1.$CIRCLE_BUILD_NUM
-          echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
-          docker image pull macthanhca/price-prediction:0.1.$CIRCLE_BUILD_NUM
-          kubectl run price-prediction\
-            --image=macthanhca/price-prediction:0.1.$CIRCLE_BUILD_NUM\
-            --port=80 --labels app=price-predictione
-          kubectl get deploy,rs,svc,pods
-          kubectl port-forward pod/price-prediction --address 0.0.0.0 8000:80
-      - destroy-environment:
-          stack: eks-${CIRCLE_WORKFLOW_ID:0:7}
+      - run:
+          name: Pull image and deploy to EKS
+          command: |
+            TAG=0.1.$CIRCLE_BUILD_NUM
+            echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+            docker image pull macthanhca/price-prediction:0.1.$CIRCLE_BUILD_NUM
+            kubectl run price-prediction\
+              --image=macthanhca/price-prediction:0.1.$CIRCLE_BUILD_NUM\
+              --port=80 --labels app=price-predictione
+            kubectl get deploy,rs,svc,pods
+            kubectl port-forward pod/price-prediction --address 0.0.0.0 8000:80
+      # - destroy-environment:
+      #     stack: eks-${CIRCLE_WORKFLOW_ID:0:7}
 workflows:
   default:
     jobs:
