Implement deploy setep

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,9 +96,9 @@ jobs:
             sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
             kubectl version --client
             aws eks --region us-east-1 update-kubeconfig --name myEKSCluster
-            add --update docker openrc
-            run rc-update add docker boot
-            run service docker start
+            apk add --update docker openrc
+            rc-update add docker boot
+            service docker start
       - run:
           name: Pull image and deploy to 
           command: |
