--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,9 +96,7 @@ jobs:
             sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
             kubectl version --client
             aws eks --region us-east-1 update-kubeconfig --name myEKSCluster
-            apk add --update docker openrc
-            rc-update add docker boot
-            service docker start
+            yum install docker-ce docker-ce-cli containerd.io docker-compose-plugin
       - run:
           name: Pull image and deploy to 
           command: |
