--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,7 +96,9 @@ jobs:
             sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
             kubectl version --client
             aws eks --region us-east-1 update-kubeconfig --name myEKSCluster
+            yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
             yum install docker-ce docker-ce-cli containerd.io docker-compose-plugin
+            systemctl start docker
       - run:
           name: Pull image and deploy to 
           command: |
