--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,14 +91,16 @@ jobs:
       - run:
           name: Install dependencies
           command: |
+            yum check-update
             yum install -y curl tar gzip sudo
             curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
             sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
             kubectl version --client
             aws eks --region us-east-1 update-kubeconfig --name myEKSCluster
-            yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
-            yum install docker-ce docker-ce-cli containerd.io docker-compose-plugin
+            curl -fsSL https://get.docker.com/ | sh
             systemctl start docker
+            systemctl status docker
+            systemctl enable docker
       - run:
           name: Pull image and deploy to 
           command: |
