--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,8 +97,14 @@ jobs:
             sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
             kubectl version --client
             aws eks --region us-east-1 update-kubeconfig --name myEKSCluster
-            yum install docker -y
-            systemctl start docker
+            yum install -y yum-utils \
+              device-mapper-persistent-data \
+              lvm2 
+            yum-config-manager \
+              --add-repo \
+              https://download.docker.com/linux/centos/docker-ce.repo
+            yum-config-manager --enable docker-ce-edge
+            yum install docker-ce
       - run:
           name: Pull image and deploy to 
           command: |
