Implement deploy setep

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,6 +100,7 @@ jobs:
             yum install -y yum-utils \
               device-mapper-persistent-data \
               lvm2 
+            yum-config-manager --save --setopt=docker-ce-stable.skip_if_unavailable=true
             yum-config-manager \
               --add-repo \
               https://download.docker.com/linux/centos/docker-ce.repo
