--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,14 +97,9 @@ jobs:
             sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
             kubectl version --client
             aws eks --region us-east-1 update-kubeconfig --name myEKSCluster
-            yum install -y yum-utils \
-              device-mapper-persistent-data \
-              lvm2 
-            yum-config-manager \
-              --add-repo \
-              https://download.docker.com/linux/centos/docker-ce.repo
-            yum-config-manager --enable docker-ce-edge
-            yum install docker-ce --disablerepo=docker-ce-stable
+            yum update -y
+            yum -y install docker
+            service docker start
       - run:
           name: Pull image and deploy to 
           command: |
