--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,7 +98,7 @@ jobs:
             kubectl version --client
             aws eks --region us-east-1 update-kubeconfig --name myEKSCluster
             yum install -y yum-utils
-            yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
+            yum-config-manager --setopt="docker-ce-stable.baseurl=https://download.docker.com/linux/centos/7/x86_64/stable" --save
             yum install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
             systemctl start docker
 
