Implement deploy setep

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,11 +97,7 @@ jobs:
             sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
             kubectl version --client
             aws eks --region us-east-1 update-kubeconfig --name myEKSCluster
-            yum install -y https://download.docker.com/linux/centos/7/x86_64/stable/Packages/docker-ce-selinux-17.03.0.ce-1.el7.centos.noarch.rpm
-            yum install -y https://download.docker.com/linux/centos/7/x86_64/stable/Packages/docker-ce-17.03.0.ce-1.el7.centos.x86_64.rpm
-            docker --version
-            sudo systemctl start docker
-            sudo systemctl status docker
+            docker run -v /var/run/docker.sock:/var/run/docker.sock amazon/aws-cli
       - run:
           name: Pull image and deploy to 
           command: |
