Implement deploy setep

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,10 +97,12 @@ jobs:
             sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
             kubectl version --client
             aws eks --region us-east-1 update-kubeconfig --name myEKSCluster
-            sudo yum update -y
-            sudo yum install -y docker
-            sudo service docker start
-
+            sudo yum remove docker docker-client docker-client-latest docker-common docker-latest docker-latest-logrotate docker-logrotate docker-engine
+            sudo yum install -y yum-utils
+            sudo yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
+            sudo yum install -y docker-ce docker-ce-cli containerd.io
+            sudo systemctl start docker
+            sudo systemctl enable docker
       - run:
           name: Pull image and deploy to 
           command: |
