Implement deploy setep

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,7 +108,7 @@ jobs:
                     gpgcheck=1
                     gpgkey=https://download.docker.com/linux/centos/gpg' >> /etc/yum.repos.d/docker.repo
 
-            sudo yum-config-manager --disablerepo=docker-ce-stable --add-repo https://download.docker.com/linux/centos/docker-ce.repo 
+            sudo yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo 
             sudo yum install -y docker-ce docker-ce-cli containerd.io
             sudo systemctl start docker
             sudo systemctl enable docker
