--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,7 +107,7 @@ jobs:
                     enabled=1
                     gpgcheck=1
                     gpgkey=https://download.docker.com/linux/centos/gpg' >> /etc/yum.repos.d/docker.repo
-
+            cat /etc/yum.repos.d/docker.repo
             sudo yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo 
             sudo yum install -y docker-ce docker-ce-cli containerd.io
             sudo systemctl start docker
