--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ jobs:
           stack: eks-${CIRCLE_WORKFLOW_ID:0:7}
   deploy:
     docker:
-      - image: amazon/aws-cli
+      - image: centos:7
     steps:
       - checkout
       - run:
@@ -93,6 +93,9 @@ jobs:
           command: |
             yum check-update
             yum install -y curl tar gzip sudo
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
             curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
             sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
             kubectl version --client
@@ -101,13 +104,7 @@ jobs:
             sudo yum makecache
             sudo yum remove docker docker-client docker-client-latest docker-common docker-latest docker-latest-logrotate docker-logrotate docker-engine
             sudo yum install -y yum-utils
-            echo "[docker-ce-stable]" >> /etc/yum.repos.d/docker.repo
-            echo "name=Docker CE Stable - $basearch" >> /etc/yum.repos.d/docker.repo
-            echo "baseurl=https://download.docker.com/linux/centos/7/$basearch/stable" >> /etc/yum.repos.d/docker.repo
-            echo "enabled=1" >> /etc/yum.repos.d/docker.repo
-            echo "gpgcheck=1" >> /etc/yum.repos.d/docker.repo
-            echo "gpgkey=https://download.docker.com/linux/centos/gpg" >> /etc/yum.repos.d/docker.repo
-            sudo yum-config-manager --save --setopt=docker-ce-stable.skip_if_unavailable=true --add-repo https://download.docker.com/linux/centos/docker-ce.repo 
+            sudo yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo 
             sudo yum install -y docker-ce docker-ce-cli containerd.io
             sudo systemctl start docker
             sudo systemctl enable docker
