--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,8 @@ jobs:
           stack: eks-${CIRCLE_WORKFLOW_ID:0:7}
   deploy:
     docker:
-      - image: centos:7
+      - image: amazon/aws-cli
+      - image: cimg/go:1.17
     steps:
       - checkout
       - run:
@@ -93,21 +94,10 @@ jobs:
           command: |
             yum check-update
             yum install -y curl tar gzip sudo
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
             curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
             sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
             kubectl version --client
             aws eks --region us-east-1 update-kubeconfig --name myEKSCluster
-            yum clean all
-            sudo yum makecache
-            sudo yum remove docker docker-client docker-client-latest docker-common docker-latest docker-latest-logrotate docker-logrotate docker-engine
-            sudo yum install -y yum-utils
-            sudo yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo 
-            sudo yum install -y docker-ce docker-ce-cli containerd.io
-            sudo systemctl start docker
-            sudo systemctl enable docker
       - run:
           name: Pull image and deploy to 
           command: |
