--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,9 +109,9 @@ jobs:
           name: Pull image and deploy to 
           command: |
             TAG=0.1.$CIRCLE_BUILD_NUM
-            docker image pull macthanhca/price-prediction:0.1.68
-            kubectl run price-prediction\
-              --image=macthanhca/price-prediction:0.1.68\
+            docker image pull macthanhca/price-prediction:0.1.$CIRCLE_BUILD_NUM
+            kubectl run price-prediction \
+              --image=macthanhca/price-prediction:0.1.$CIRCLE_BUILD_NUM \
               --port=80 --labels app=price-predictione
             kubectl get deploy,rs,svc,pods
       - destroy-environment:
