--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ jobs:
       - run: 
           name: build and push
           command: |
-            TAG=0.1.$CIRCLE_BUILD_NUM
+            TAG=${CIRCLE_WORKFLOW_ID:0:7}
             docker build --platform=linux/amd64 --tag=macthanhca/price-prediction:$TAG .
             echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
             docker push macthanhca/price-prediction:$TAG
@@ -108,10 +108,10 @@ jobs:
       - run:
           name: Pull image and deploy to 
           command: |
-            TAG=0.1.$CIRCLE_BUILD_NUM
-            docker image pull macthanhca/price-prediction:0.1.$CIRCLE_BUILD_NUM
+            TAG=${CIRCLE_WORKFLOW_ID:0:7}
+            docker image pull macthanhca/price-prediction:$TAG
             kubectl run price-prediction \
-              --image=macthanhca/price-prediction:0.1.$CIRCLE_BUILD_NUM \
+              --image=macthanhca/price-prediction:$TAG \
               --port=80 --labels app=price-predictione
             kubectl get deploy,rs,svc,pods
       - destroy-environment:
